# wedding-projecter-slideshow

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py  moderation.py  queue.py  storage.py
app/templates/: admin.html  base.html  booth.html  gallery.html  projector.html  upload.html
config/: cloudflared.example.yml  cloudflared.yml
scripts/: generate_qr.py  test_moderation.py
static/css/: style.css
static/js/: admin.js  booth.js  projector.js  upload.js
tests/: conftest.py  test_api.py  test_gallery.py  test_moderation.py  test_storage.py
