[project]
name = "wedding-live-vlm"
version = "0.1.0"
description = "Omaha-88: Local-first live wedding slideshow with on-device VLM moderation (Moondream 3 / MLX)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "pillow>=10.3",
    "pillow-heif>=0.18",
    "segno>=1.6",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "boto3>=1.34",
]

[project.optional-dependencies]
# On-device vision engine. Installed separately so the web harness can boot and
# be tested before the (large) model weights are pulled. Apple Silicon only:
# the `moondream` package runs Moondream 3 via MLX/Metal under the hood.
vlm = [
    "moondream>=1.3",
    "transformers>=4.44",  # dedicated NSFW image classifier
    "timm>=1.0",           # Marqo NSFW model is a timm-wrapped ViT
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "moto[s3]>=5.0",  # in-memory S3 for storage tests
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
